# private-assistant-comms-bridge-py

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Containerfile  README.md  pyproject.toml  renovate.json  template.yaml
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: container-build-push.yml  docker-build-action.yml  python_code_quality.yml
app/: main.py
app/utils/: processing_sound.py  speech_recognition_tools.py  support_utils.py
assets/: hey_loona.onnx  hey_loona.tflite  hey_nohvah.onnx  hey_nohvah.tflite  okay_nabu.onnx  okay_nabu.tflite
examples/: client.py  config.yaml  install.sh  private-assistant-bridge-client.service  requirements.txt
scripts/: install_dependencies.sh  list_devices_pyaudio.py
src/app/: main.py
src/app/utils/: support_utils.py
src/private_assistant_comms_bridge/: main.py
src/private_assistant_comms_bridge/sounds/: sounds.py
src/private_assistant_comms_bridge/utils/: client_config.py  config.py  mqtt_utils.py  playing_sound.py  processing_sound.py  silero_vad.py  speech_recognition_tools.py  support_utils.py
tests/: test_config.py  test_endpoints.py  test_speech_recognition.py  test_speech_recognition_tools.py
tests/data/: config.yaml
