[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "2.0.1"
description = "Comms Bridge is an open-source endpoint designed to facilitate speech interaction within smart assistant systems, optimized for operation on edge devices."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = { text = "GNU General Public License v3.0" }

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx~=0.27.0",
    "pyyaml~=6.0.1",
    "pydantic~=2.9.0",
    "private-assistant-commons~=3.0.0",
    "fastapi[standard]~=0.115.6",
    "speexdsp-ns~=0.1.2",
    "numpy==1.26.4",
    "aiomqtt~=2.3.0",
    "onnxruntime~=1.20.0",
    "pysilero-vad~=2.0.0",
    "openWakeWord",
]

[tool.uv.sources]
openWakeWord = {git = "https://github.com/stkr22/openWakeWord.git", rev = "fb168ea71d5fb0f93ba8668107d51b57e8948a39"}

[dependency-groups]
dev = [
    "ruff~=0.8.0",
    "mypy~=1.15.0",
    "pytest~=8.3.3",
    "pytest-cov~=6.0.0",
    "types-pyyaml~=6.0.12.20240311",
    "websockets~=14.1",
]

[[tool.mypy.overrides]]
module = [
    "openwakeword.*",
    "pyaudio.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
]
ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]
